--- a/package.json
+++ b/package.json
@@ -3,7 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "packageManager": "pnpm@10.5.2",
-  "scripts": {},
-  "dependencies": {},
-  "devDependencies": {}
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "15.2.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "22.13.9",
+    "@types/react": "19.0.10",
+    "typescript": "5.8.2"
+  }
 }
