--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "devDependencies": {
     "@types/node": "22.13.9",
     "@types/react": "19.0.10",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.1",
     "typescript": "5.8.2"
   }
 }
