--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -20,8 +20,4 @@ jobs:
       - name: Build Project Artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} | tee deploy.log
-      - id: seturl
-        name: Set preview url
-        run: echo "url=$(tail -1 deploy.log)">> $GITHUB_OUTPUT
-      - run: echo "${{ steps.seturl.outputs.url }}"
+        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
