fix: invalid utils path

--- a/components.json
+++ b/components.json
@@ -12,7 +12,7 @@
   },
   "aliases": {
     "components": "~/components",
-    "utils": "~/lib/styles/utils",
+    "utils": "~/styles/utils",
     "ui": "~/components/ui",
     "lib": "~/lib",
     "hooks": "~/hooks"
