--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:ts": "tsc --noEmit",
     "format": "prettier . --write",
     "prepare": "husky",
     "commitlint": "commitlint --edit"
