--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@tailwindcss/postcss": "^4.0.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.40.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.479.0",
     "next": "^15.2.1",
+    "pg": "^8.14.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -34,7 +37,9 @@
     "@eslint/js": "^9.22.0",
     "@next/eslint-plugin-next": "^15.2.1",
     "@types/node": "^22.13.9",
+    "@types/pg": "^8.11.11",
     "@types/react": "^19.0.10",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^9.22.0",
     "eslint-config-next": "^15.2.1",
     "eslint-config-prettier": "^10.1.1",
@@ -42,6 +47,7 @@
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
 }
