--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^9.22.0",
     "eslint-config-next": "^15.2.1",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
