--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prepare": "husky",
     "commitlint": "commitlint --edit",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate"
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.12.0",
