feat: integrate better-auth for authentication

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,11 @@ SKIP_ENV_VALIDATION=<true | false>
 # Application
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
+# Authentication
+# random value used by the library for encryption and generating hashes
+BETTER_AUTH_SECRET=<secret key>
+# [OPTIONAL] Base URL of the application
+BETTER_AUTH_URL=http://localhost:3000
+
 # Database connection
 DATABASE_URL=postgresql://<USERNAME>:<PASSWORD>@<HOST>/<DATABASE>?sslmode=require
