--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "commitlint": "commitlint --edit",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "auth:generate": "pnpx @better-auth/cli generate --config ./src/auth --output ./src/database/schema/auth.ts"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tailwindcss/postcss": "^4.0.12",
+    "better-auth": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
